Fixed spacing and reduced number of images collected.

--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@
     text-shadow: 0 0 10px black;
     display: flex;
     align-items: baseline;
-    gap: 25px;
+    /* gap: 25px; */
   }
 
   #slideshow {
@@ -45,7 +45,7 @@
     font-size: 200%;
     display: flex;
     align-items: flex-end;
-    gap: 25px;
+    margin-left: 25px;
   }
 
   #weather * {
